Improve persistent CSV preprocessing workflow